add ecommerce-otso full code

--- a/src/App.css
+++ b/src/App.css
@@ -106,3 +106,20 @@ Table tr:nth-child(odd) {
     border: 2px solid #DFDFDF; /* Adjust the border size and color as needed */
 }
 
+.wrapper{
+  display: grid;
+  grid-auto-columns: repeat(auto-fit, minmax(350, 1fr)) ;
+  gap: 0.5rem;
+  margin-bottom: 2rem;
+}
+.productComponent{
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  padding: 2rem;
+  text-align: center;
+  width : 20rem;
+  display: grid;
+  grid-template-rows: subgrid;
+  grid-row: span 3 ;
+
+}
